Improved scripting of Extract Superclass